fix spacing issue

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ h3, h2, h1 {
 button {
   font-size: 18px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  margin-left: 50%;
+  margin-left: 40%;
   height: 50px;
   width: 100px;
   background-color: #2a4e6b;
